src/Base/main/default/objects/Prepaid_Service_Redeemed__c/Prepaid_Service_Redeemed__c.object-meta.xml
<CustomObject>
    <description>Service redeemed</description>
    <label>Redeemed Prepaid Service Line</label>
    <nameField>
        <displayFormat>PSD-{000000}</displayFormat>
        <label>Prepaid Service Redeemed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redeemed Prepaid Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>