src/Base/main/default/objects/Prepaid_Service_Redeemed__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Redeemed Prepaid Service Lines</relationshipLabel>
    <relationshipName>Redeemed_Prepaid_Service_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>