src/Base/main/default/objects/Prepaid_Service_Redeemed__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ERP Order that the prepaid service was redeemed on</description>
    <label>ERP Order</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Redeemed Prepaid Service Lines</relationshipLabel>
    <relationshipName>Redeemed_Prepaid_Service_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>