src/Base/main/default/objects/Prepaid_Service_Redeemed__c/fields/Prepaid_Service__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_Service__c</fullName>
    <description>Prepaid service package purchased</description>
    <label>Prepaid Service</label>
    <referenceTo>Prepaid_Service__c</referenceTo>
    <relationshipLabel>Redeemed Prepaid Service Lines</relationshipLabel>
    <relationshipName>Redeemed_Prepaid_Service_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>